--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!-- Css BootStrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
     <!-- CSS -->
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Google Fonts -->
 </head>
@@ -28,8 +28,7 @@
         <a class="navbar-brand" href="#top">
             <img class="logo" src="assets/images/logo.svg">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -59,7 +58,7 @@
     <div class="container">
         <!-- End of "page 1" -->
         <section id="about">
-            <div class="card my-4">
+            <div class="card my-4" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
                 <div class="card-body row justify-content-center">
                     <div class="col-lg-6">
                         <img src="https://source.unsplash.com/500x500/?food" class="img-fluid">
@@ -67,38 +66,28 @@
                     <div class="col-lg-6">
                         <h1>About Foodtroverts</h1>
                         <p>
-                            Ever been hungry but wanted some company, or just some good food and conversation? Are all of your friends busy during your
-                            lunch hours? Maybe there is a new place you want to try in your area but your tastebuds are more
-                            adventurous than the people you would usually eat out with? Good news…We’re here to help!
+                            Ever been hungry but wanted some company, or just some good food and conversation? Are all of your friends busy during your lunch hours? Maybe there is a new place you want to try in your area but your tastebuds are more adventurous than the people you would usually eat out with? Good news…We’re here to help!
                         </p>
                         <p>
-                            Foodtroverts is a platform built with the intention of bringing people together, everyone has to eat so why not add some
-                            company? Often times people associate food with dating - so we are here to get rid of that stigma.
-                            However - new friends, great experiences, networking, and maybe a new mate…it’s ALL welcomed
-                            here after a good meal!
+                            Foodtroverts is a platform built with the intention of bringing people together, everyone has to eat so why not add some company? Often times people associate food with dating - so we are here to get rid of that stigma. However - new friends, great experiences, networking, and maybe a new mate…it’s ALL welcomed here after a good meal!
                         </p>
                         <p>
                             What do you have to lose? Get started today!
-
                         </p>
                     </div>
                 </div>
             </div>
         </section>
         <section id="howTo">
-            <div class="card my-4">
+            <div class="card my-4" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
                 <div class="card-body row justify-content-center">
                     <div class="col-lg-6">
                         <h1>How To</h1>
                         <p>
-                            You’ve made it this far, so let us do the rest of the work for you! Simply navigate to the ‘Get Started’ form and input your
-                            name, location desired, preference of time, as well as the type of cuisine you’re feeling curious
-                            about.
+                            You’ve made it this far, so let us do the rest of the work for you! Simply navigate to the ‘Get Started’ form and input your name, location desired, preference of time, as well as the type of cuisine you’re feeling curious about.
                         </p>
                         <p>
-                            After submitting this information, we will then take the reigns for you and find your match - just like that! Soon after
-                            someone in your area has the same interests as you, you will be notified upon submission with
-                            a time and the exact restaurant you will be expected at as well as your new buddies name.
+                            After submitting this information, we will then take the reigns for you and find your match - just like that! Soon after someone in your area has the same interests as you, you will be notified upon submission with a time and the exact restaurant you will be expected at as well as your new buddies name.
                         </p>
                         <p>
                             [In app messaging coming soon!]
@@ -106,7 +95,6 @@
                         <p>
                             Have fun! Wishing you many more - new friends and happy meals! -Foodtroverts, your fellow foodies.
                         </p>
-
                     </div>
                     <div class="col-lg-6">
                         <img src="https://source.unsplash.com/500x500/?burgers" class="img-fluid">
@@ -122,9 +110,7 @@
                             <div class="carousel-item active row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="reviews">
-                                        <p>“ I went from eating alone at the local deli every lunch, to hanging out with Becky
-                                            (with the good hair) down at Tweeter HQ. We live tweet all our meals now #LivingMyBestLife
-                                            #WishYouWereHere " 
+                                        <p>“ I went from eating alone at the local deli every lunch, to hanging out with Becky (with the good hair) down at Tweeter HQ. We live tweet all our meals now #LivingMyBestLife #WishYouWereHere "
                                         </p>
                                         <p>
                                             - Karen, Pottery Yarn
@@ -135,12 +121,9 @@
                             <div class="carousel-item row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="reviews">
-                                        <p>“ My husband and I have been married for 15 years - the conversation has become a
-                                            bit dry to say the least. I’m so happy Foodtroverts exists, now we both have our
-                                            nights to eat wherever we want and have some fresh company. It’s really revived
-                                            our relationship! Thanks for the great experiences. " 
-                                            </p>
-                                            <p>
+                                        <p>“ My husband and I have been married for 15 years - the conversation has become a bit dry to say the least. I’m so happy Foodtroverts exists, now we both have our nights to eat wherever we want and have some fresh company. It’s really revived our relationship! Thanks for the great experiences. "
+                                        </p>
+                                        <p>
                                             - Linda, From HR
                                         </p>
                                     </div>
@@ -149,14 +132,10 @@
                             <div class="carousel-item row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="reviews">
-                                        <p>“ After being at my fraternity, I was tired of dive bar burgers and instant ramen.
-                                            Foodtroverts helped me expand my food palate, while meeting new people and dining
-                                            at upscale restaurants. Now I finally know acceptable places to bring a
-                                            date to, oh...and what foie gras is. " 
+                                        <p>“ After being at my fraternity, I was tired of dive bar burgers and instant ramen. Foodtroverts helped me expand my food palate, while meeting new people and dining at upscale restaurants. Now I finally know acceptable places to bring a date to, oh...and what foie gras is. "
                                         </p>
-                                            <p> 
-                                                    — Todd, from Phi Kappa Phi
-                                            
+                                        <p>
+                                            — Todd, from Phi Kappa Phi
                                         </p>
                                     </div>
                                 </div>
@@ -164,16 +143,11 @@
                             <div class="carousel-item row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="reviews">
-                                        <p>“ For the past 3 years me and Spencer have been passing by one another, oblivious
-                                            to each others existence despite being 4 cubicles away from one another. I downloaded
-                                            Foodtroverts to find a buddy during lunch hours - unexpectedly matching with
-                                            Spencer. Wow. We have been inseparable ever since and are officially announcing
-                                            our engagement next month. I know the app says ‘We came for the food’, but I
-                                            just happened to find some romance too. "
-                                            </p>
-                                            <p>
-                                                - Stanley, From Accounting
-                                            </p>
+                                        <p>“ For the past 3 years me and Spencer have been passing by one another, oblivious to each others existence despite being 4 cubicles away from one another. I downloaded Foodtroverts to find a buddy during lunch hours - unexpectedly matching with Spencer. Wow. We have been inseparable ever since and are officially announcing our engagement next month. I know the app says ‘We came for the food’, but I just happened to find some romance too. "
+                                        </p>
+                                        <p>
+                                            - Stanley, From Accounting
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -192,7 +166,9 @@
         </section>
         <!-- Page 2 -->
         <section id="getStarted">
-            <div class="card my-2" id="userForm">
+            <div class="card my-2" id="userForm" data-aos="fade-up"
+     data-aos-easing="linear"
+     data-aos-duration="500">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-12">
@@ -284,30 +260,31 @@
         </div>
     </footer>
     <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- SMOOTH SCROLL -->
     <script>
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function(e) {
+            e.preventDefault();
 
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
             });
         });
+    });
     </script>
     <!-- End of SMOOTH SCROLL -->
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
     <!-- Bootstrap -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <!-- JavaScript -->
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script src="assets/javascript/app.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 
 </html>
