--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         </div>
                         <div class="form-row justify-content-end mt-4">
                             <div class="form-group col-md-3">
-                                <button id="submitImage" class="btn btn-light">Upload</button>
+                                <button id="submitImage" class="btn btn-primary">Upload</button>
                             </div>
                         </div>
                         <!-- drop down for food selections -->
@@ -226,7 +226,7 @@
                             <div id="submitMessage" class="col-md-9">
                             </div>
                             <div class="form-group col-md-3">
-                                <button id="submitPref" class="btn btn-light">Lets Eat!</button>
+                                <button id="submitPref" class="btn btn-outline-primary">Lets Eat!</button>
                             </div>
                         </div>
                     </form>
