--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <!-- Google Fonts -->
 </head>
 
 <body>
@@ -38,6 +37,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#howTo">How To</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#reviews">Reviews</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#getStarted">Get Started</a>
@@ -66,10 +68,10 @@
                     <div class="col-lg-6">
                         <h1>About Foodtroverts</h1>
                         <p>
-                            Ever been hungry but wanted some company, or just some good food and conversation? Are all of your friends busy during your lunch hours? Maybe there is a new place you want to try in your area but your tastebuds are more adventurous than the people you would usually eat out with? Good news…We’re here to help!
+                            Ever been hungry but wanted some company, or just some good food and conversation? Are all of your friends busy during your lunch hours? Maybe there is a new place you want to try in your area but your tastebuds are more adventurous than the people you would usually eat out with? Good news… We’re here to help!
                         </p>
                         <p>
-                            Foodtroverts is a platform built with the intention of bringing people together, everyone has to eat so why not add some company? Often times people associate food with dating - so we are here to get rid of that stigma. However - new friends, great experiences, networking, and maybe a new mate…it’s ALL welcomed here after a good meal!
+                            Foodtroverts is a platform built with the intention of bringing people together, everyone has to eat so why not add some company? Often times people associate food with dating - so we are here to get rid of that stigma. However - new friends, great experiences, networking, and maybe a special connection... it’s ALL welcomed here after a good meal!
                         </p>
                         <p>
                             What do you have to lose? Get started today!
@@ -102,9 +104,24 @@
                 </div>
             </div>
         </section>
-        <section id="howTo">
-            <div class="card my-4">
+        <section id="reviews">
+            <div class="card my-4" data-aos="fade-down" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <div class="card-body">
+                    <div class="row justify-content-center">
+                        <div class="col-12">
+                            <h1 class="text-center">Reviews</h1>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-10">
+                            <img src="assets/images/happypeople.png" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-12">
+                            <p class="text-center font-italic">Don't take our word for it! Hear what our happy users have to say!</p>
+                        </div>
+                    </div>
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active row justify-content-center">
@@ -112,7 +129,7 @@
                                     <div class="reviews">
                                         <p>“ I went from eating alone at the local deli every lunch, to hanging out with Becky (with the good hair) down at Tweeter HQ. We live tweet all our meals now #LivingMyBestLife #WishYouWereHere "
                                         </p>
-                                        <p>
+                                        <p class="text-right font-weight-bold font-italic">
                                             - Karen, Pottery Yarn
                                         </p>
                                     </div>
@@ -123,7 +140,7 @@
                                     <div class="reviews">
                                         <p>“ My husband and I have been married for 15 years - the conversation has become a bit dry to say the least. I’m so happy Foodtroverts exists, now we both have our nights to eat wherever we want and have some fresh company. It’s really revived our relationship! Thanks for the great experiences. "
                                         </p>
-                                        <p>
+                                        <p class="text-right font-weight-bold font-italic">
                                             - Linda, From HR
                                         </p>
                                     </div>
@@ -134,7 +151,7 @@
                                     <div class="reviews">
                                         <p>“ After being at my fraternity, I was tired of dive bar burgers and instant ramen. Foodtroverts helped me expand my food palate, while meeting new people and dining at upscale restaurants. Now I finally know acceptable places to bring a date to, oh...and what foie gras is. "
                                         </p>
-                                        <p>
+                                        <p class="text-right font-weight-bold font-italic">
                                             — Todd, from Phi Kappa Phi
                                         </p>
                                     </div>
@@ -145,30 +162,20 @@
                                     <div class="reviews">
                                         <p>“ For the past 3 years me and Spencer have been passing by one another, oblivious to each others existence despite being 4 cubicles away from one another. I downloaded Foodtroverts to find a buddy during lunch hours - unexpectedly matching with Spencer. Wow. We have been inseparable ever since and are officially announcing our engagement next month. I know the app says ‘We came for the food’, but I just happened to find some romance too. "
                                         </p>
-                                        <p>
+                                        <p class="text-right font-weight-bold font-italic">
                                             - Stanley, From Accounting
                                         </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <!--                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a> -->
                     </div>
                 </div>
             </div>
         </section>
         <!-- Page 2 -->
         <section id="getStarted">
-            <div class="card my-2" id="userForm" data-aos="fade-up"
-     data-aos-easing="linear"
-     data-aos-duration="500">
+            <div class="card my-2" id="userForm" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-12">
