--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-12">
-                            <p class="text-center font-italic">Don't take our word for it! Hear what our happy users have to say!</p>
+                            <p class="text-center font-italic">Don't take our word for it? Hear what our happy users have to say!</p>
                         </div>
                     </div>
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
