Slow down carousel for reading time

--- a/index.html
+++ b/index.html
@@ -292,6 +292,11 @@
     <script>
     AOS.init();
     </script>
+    <script>
+    $('.carousel').carousel({
+        interval: 9000
+    })
+    </script>
 </body>
 
 </html>
